src/objects/Quick_Sales_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>APR_Merge__c</fullName>
        <formula>APR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APR Merge</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APR__c</fullName>
        <inlineHelpText>Estimated Annual Percentage Rate Without Buydown, calculated by code for adjustable rate loans</inlineHelpText>
        <label>APR</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_ITC__c</fullName>
        <formula>IF (
Tax_Credit_Modified_by_Partner__c , 
Modified_ITC__c,
ITC_Estimated__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied ITC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Tax_Credits__c</fullName>
        <formula>Applied_State_Credits__c + Applied_ITC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Tax Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Adjustable_Payment_With_Buydown__c</fullName>
        <inlineHelpText>Average P&amp;I Payment for Adjustable Loans, calculated by code</inlineHelpText>
        <label>Average Adjustable Payment With Buydown</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Adjustable_Payment__c</fullName>
        <inlineHelpText>Average P&amp;I Payment for Adjustable Loans, calculated by code</inlineHelpText>
        <label>Average Adjustable Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Credit_Text_Rounded__c</fullName>
        <formula>IF(AND(ITC_Estimated__c &lt;= 9999, ITC_Estimated__c &gt; 999) , 

LEFT(TEXT(Round(ITC_Estimated__c,0)),1)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Round(ITC_Estimated__c,0)),3) , 

IF(AND(ITC_Estimated__c &lt;= 99999, ITC_Estimated__c &gt; 9999) , 

LEFT(TEXT(Round(ITC_Estimated__c,0)),2)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Round(ITC_Estimated__c,0)),3) , 

IF(AND(ITC_Estimated__c &lt;= 999999, ITC_Estimated__c &gt; 99999) , 

LEFT(TEXT(Round(ITC_Estimated__c,0)),3)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Round(ITC_Estimated__c,0)),3) ,

TEXT(Round(ITC_Estimated__c,0))

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Tax Credit Text Rounded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Charge__c</fullName>
        <formula>Total_Loan_Payments__c - Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generate_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITC_Estimated__c</fullName>
        <formula>System_Cost__c * 0.30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITC Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link_to_File__c</fullName>
        <defaultValue>&quot;notgenerated&quot;</defaultValue>
        <label>Link to File</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Partner_Logo__c</fullName>
        <formula>&quot;https://na54.salesforce.com/servlet/servlet.FileDownload?file=&quot; + Partner_Logo_File_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Partner Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <formula>System_Cost__c - Down_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Payments__c</fullName>
        <formula>Monthly_Payment__c *  Product__r.Loan_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Principal__c</fullName>
        <label>Loan Principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Payment__c</fullName>
        <inlineHelpText>Maximum payment for adjustable loans, assuming the loan hits the ceiling rate as soon as possible, and no principal buydown.</inlineHelpText>
        <label>Maximum Payment</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modified_ITC__c</fullName>
        <label>Modified ITC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modified_State_Tax_Credit__c</fullName>
        <label>Modified State Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Logo_File_Name__c</fullName>
        <label>Partner Logo File Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Quick_Sales_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_to_Email__c</fullName>
        <description>Populated by the SLPQuickSalesSheetController component when sending the quick sales sheet</description>
        <label>Send to Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sent_to_Customer__c</fullName>
        <formula>if ( AND(NOT(ISBLANK(Send_to_Email__c)), Generate_Doc__c), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Cost__c</fullName>
        <label>System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Modified_by_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Credit Modified by Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_2_Payoff__c</fullName>
        <inlineHelpText>Year 2 payoff amount for adjustable loans, rounded to the nearest 100</inlineHelpText>
        <label>Year 2 Payoff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_4_Payoff__c</fullName>
        <inlineHelpText>Year 4 payoff amount for adjustable loans, rounded to the nearest 100</inlineHelpText>
        <label>Year 4 Payoff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Presentation Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Link_to_File__c</columns>
        <columns>System_Cost__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presentation Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>